src/parser/snapshots/monkey_language_server__parser__test__fn_expr_unhappy_13_errors.snap
---
source: src/parser/test.rs
description: "fn(x) { x + 1; @ }"
expression: "parser_errors(\"fn(x) { x + 1; @ }\", errors)"
---
fn(x) { x + 1; @ }
               ^ SyntaxError: Unexpected '@'.
